// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components SaveFilter should enable save 1`] = `
<div
  class="saveFilter"
>
  <div>
    <a
      href="#"
    >
      Save segmentation
    </a>
  </div>
  <div>
    <div
      class="popup"
    >
      <div
        class="pb-3"
      >
        <b>
          Save Segmentation
        </b>
      </div>
      <div
        class="form-group"
      >
        <label
          for="segmentName"
        >
          Name
        </label>
        <input
          class="form-control"
          id="segmentName"
          maxlength="25"
          type="text"
          value="hi"
        />
      </div>
      <div
        class="text-center"
      >
        <button
          class="btn btn-secondary btn-sm"
          type="button"
        >
          Cancel
        </button>
        <button
          class="btn btn-primary btn-sm ml-3"
          type="button"
        >
          Save
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components SaveFilter should fire save 1`] = `
<div
  class="saveFilter"
>
  <div>
    <a
      href="#"
    >
      Save segmentation
    </a>
  </div>
  <div>
    <div
      class="popup"
    >
      <div
        class="pb-3"
      >
        <b>
          Save Segmentation
        </b>
      </div>
      <div
        class="form-group"
      >
        <label
          for="segmentName"
        >
          Name
        </label>
        <input
          class="form-control"
          id="segmentName"
          maxlength="25"
          type="text"
          value=""
        />
      </div>
      <div
        class="text-center"
      >
        <button
          class="btn btn-secondary btn-sm"
          type="button"
        >
          Cancel
        </button>
        <button
          class="btn btn-primary btn-sm ml-3"
          disabled=""
          type="button"
        >
          Save
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components SaveFilter should pop open 1`] = `
<div
  class="saveFilter"
>
  <div>
    <a
      href="#"
    >
      Save segmentation
    </a>
  </div>
  <div>
    <div
      class="popup"
    >
      <div
        class="pb-3"
      >
        <b>
          Save Segmentation
        </b>
      </div>
      <div
        class="form-group"
      >
        <label
          for="segmentName"
        >
          Name
        </label>
        <input
          class="form-control"
          id="segmentName"
          maxlength="25"
          type="text"
          value=""
        />
      </div>
      <div
        class="text-center"
      >
        <button
          class="btn btn-secondary btn-sm"
          type="button"
        >
          Cancel
        </button>
        <button
          class="btn btn-primary btn-sm ml-3"
          disabled=""
          type="button"
        >
          Save
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components SaveFilter should render 1`] = `
<div
  className="saveFilter"
>
  <div>
    <a
      href="#"
      onClick={[Function]}
    >
      Save segmentation
    </a>
  </div>
  <TooltipPopup
    direction="top"
    onClickOutside={[Function]}
    show={false}
    target={null}
  >
    <div
      className="popup"
    >
      <div
        className="pb-3"
      >
        <b>
          Save Segmentation
        </b>
      </div>
      <div
        className="form-group"
      >
        <label
          htmlFor="segmentName"
        >
          Name
        </label>
        <input
          className="form-control"
          id="segmentName"
          maxLength="25"
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="text-center"
      >
        <button
          className="btn btn-secondary btn-sm"
          onClick={[Function]}
          type="button"
        >
          Cancel
        </button>
        <button
          className="btn btn-primary btn-sm ml-3"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Save
        </button>
      </div>
    </div>
  </TooltipPopup>
</div>
`;
